Fix icons position on mobile screens

--- a/src/assets/scss/layout/_site-header.scss
+++ b/src/assets/scss/layout/_site-header.scss
@@ -25,7 +25,7 @@
     width: 2.1rem;
     height: 2rem;
     position: absolute;
-    top: 2.1rem;
+    top: 2rem;
     left: 2rem;
     text-align: left;
     cursor: pointer;
@@ -108,7 +108,7 @@
 
   &__search-icon {
     position: absolute;
-    top: 2rem;
+    top: 1.7rem;
     right: 2rem;
     cursor: pointer;
     font-size: 2.4rem;
